application/php-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-v1
  name: web
  namespace: demo-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app-v1
        version: v1
    spec:
      containers:
      - name: php-fpm
        image: docker.io/mohitverma1688/php-app:main-e9c3cd68-1723729530 #  {"$imagepolicy": "flux-system:demowebapp"}
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      imagePullSecrets:
      - name: dockcred
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
